# JibsInferno

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
src/: Game.cpp  Game.h  Game.h~  SimpleFragmentShader.fragmentshader.glsl  SimpleVertexShader.vertexshader.glsl  main.cpp
src/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake  glm_dummy
